--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Intelligent photo tagging and memory management system backend",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc --jsx react-jsx",
     "start": "node dist/index.js",
     "dev": "vite",
     "build": "tsc",
