--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "jsx": "react-jsx",
